Added a server template option to make virtual servers' php.ini files non-editable by the server owner.
---- Changes since 3.39 ----
Updated Gallery script installer to 1.5.6, and phpMyAdmin to 2.10.1.
If a domain with the same TLD already exists as one you are creating, the automatically generated group name will be the new full domain name, to avoid clashes.
The stats web directory is now password-protected by default.
Added the list-bandwidth.pl command-line script for displaying usage by domain, date and feature.
Added script installer for Simple Machines Forum.
Added a server templates option to set the default timeout for the HTTP status monitor feature.
The number of days to keep old bandwidth data can now be configured on the Bandwidth Monitoring page.
Added the list-features.pl script, for finding available features for new virtual servers.
Updated all script installers to check for the mysql and possibly pgsql PHP modules, if needed.
Added a link on the Manage SSL Certificate page for downloading a domain's cert in PEM format.
Added a button on the Bandwidth Monitoring page for re-generating bandwidth stats from the original log files.
Added a script installer for SugarCRM 4.5.1b.
Added a Module Config option to control of sub-domains can be created. This is disabled by default unless the system already has some sub-domains, as they are confusing and rarely used.
All script installers now check that they can connect to the selected database bbefore proceeding with the install, just in case the login is invalid. This prevents odd errors later on.
Added Module Config options for external quota commands to use, instead of the standard Unix commands. This allows a different quota system (such as ZFS or on an NFS server) to be used instead.