@@ -54,4 +54,3 @@
 	- autoindex PHP script (805)
 	- jupload (806)
 
-  - external commands to get/set quotas
